@@ -84,8 +84,10 @@ UpdatePreferencesPanel.connectionFailureDialogMsg=Unable to download release.xml
 UpdatePreferencesPanel.dailyLabel=Daily
 UpdatePreferencesPanel.enableAutoUpdate=Enable Automatic Updates
 UpdatePreferencesPanel.localPathLabel=Local Path:
+UpdatePreferencesPanel.localSiteButtonLabel=Local
 UpdatePreferencesPanel.path=Path:
 UpdatePreferencesPanel.port=Port:
+UpdatePreferencesPanel.remoteSiteButtonLabel=Remote
 UpdatePreferencesPanel.server=Server:
 UpdatePreferencesPanel.siteTypeLabel=Site Type:
 UpdatePreferencesPanel.stableChannelLabel=Stable
